# galay-kernel

./: .claude_context.md  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  MODULE.bazel  README.md  benchmark_udp_optimized_results.txt  benchmark_udp_results.txt  galay-kernel-config.cmake.in
.claude/agents/: cpp-developer.md
benchmark/: B1-compute_scheduler.cc  B10-Ringbuffer.cc  B11-TcpIovServer.cc  B11-tcp_iov_server.cc  B12-TcpIovClient.cc  B12-tcp_iov_client.cc  B13-Sendfile.cc  B14-scheduler_injected_wakeup.cc  B2-TcpServer.cc  B2-tcp_server.cc  B3-TcpClient.cc  B3-tcp_client.cc  B4-UdpServer.cc  B4-udp_server.cc  B5-UdpClient.cc  B5-udp_client.cc  B6-Udp.cc  B7-FileIo.cc  B7-file_io.cc  B8-MpscChannel.cc  B8-mpsc_channel.cc  B9-UnsafeChannel.cc  B9-unsafe_channel.cc  CMakeLists.txt  b10_ringbuffer.cc  b11_iov.cc  b12_iov.cc  b13_sendfile.cc  b14_wakeup.cc  b1_compute.cc  b2_tcp.cc  b3_tcp.cc  b4_udp.cc  b5_udp.cc  b6_udp.cc  b7_fileio.cc  b8_mpsc.cc  b9_unsafe.cc  bench_client.cc  bench_compute_scheduler.cc  (+11 more)
build-docverify/: CMakeCache.txt  Makefile  cmake_install.cmake
build-docverify/benchmark/: Makefile  cmake_install.cmake
build-docverify/examples/: Makefile  cmake_install.cmake
build-docverify/galay-kernel/: Makefile  (+2 more)
cmake/: option.cmake
doc/: api.md  benchmark.md
docs/: 00-快速开始.md  01-API文档.md  01-api.md  01-架构设计.md  02-API参考.md  02-benchmark.md  02-性能测试.md  03-compute-scheduler.md  03-使用指南.md  03-计算调度器.md  04-UDP性能测试.md  04-udp-benchmark.md  04-示例代码.md  05-scheduler.md  05-性能测试.md  06-协程.md  06-高级主题.md  07-network-io.md  07-常见问题.md  07-网络IO.md  08-文件IO.md  08-计算调度器.md  09-UDP性能测试.md  09-concurrency.md  10-定时器调度器.md  10-调度器.md  11-ringbuffer.md  11-协程.md  11-环形缓冲区.md  12-网络IO.md  12-零拷贝发送文件.md  13-文件IO.md  14-并发.md  15-定时器调度器.md  16-环形缓冲区.md  17-示例代码.md  17-零拷贝发送文件.md  18-常见问题.md  18-运行时Runtime.md  19-文件监控.md  (+7 more)
example/: CMakeLists.txt
example/import/: E1-SendfileExample.cc  E2-TcpEchoServer.cc  E3-TcpClient.cc  E4-CoroutineBasic.cc  E5-UdpEcho.cc  E6-MpscChannel.cc  E7-UnsafeChannel.cc  E8-AsyncSync.cc  E9-TimerSleep.cc
examples/: CMakeLists.txt  E1-SendfileExample.cc  E5-UdpEcho.cc  E6-ModuleBasic.cc  sendfile_example.cc
examples/import/: E1-SendfileExample.cc  E1-sendfile_example.cc  E2-TcpEchoServer.cc  E2-tcp_echo_server.cc  E3-TcpClient.cc  E3-tcp_client.cc  E4-coroutine_basic.cc  E5-UdpEcho.cc  E5-udp_echo.cc  E6-mpsc_channel.cc  E7-unsafe_channel.cc  E8-AsyncSync.cc  E8-async_sync.cc  E9-TimerSleep.cc  E9-timer_sleep.cc  e10_await.cc  e11_proto.cc  e1_sendfile.cc  e2_echo.cc  e3_tcp.cc  e4_task.cc  e5_udp.cc  e6_mpsc.cc  e7_unsafe.cc  e8_async.cc  e9_sleep.cc
examples/include/: E1-SendfileExample.cc  E1-sendfile_example.cc  E2-TcpEchoServer.cc  E2-tcp_echo_server.cc  E3-TcpClient.cc  E3-tcp_client.cc  E4-CoroutineBasic.cc  E4-coroutine_basic.cc  E5-UdpEcho.cc  E5-udp_echo.cc  e10_await.cc  e11_proto.cc  e1_sendfile.cc  e2_echo.cc  e3_tcp.cc  e4_task.cc  e5_udp.cc
galay-kernel/: CMakeLists.txt
galay-kernel/async/: AioFile.cc  AioFile.h  AsyncFile.cc  AsyncFile.h  FileWatcher.cc  FileWatcher.h  TcpSocket.cc  TcpSocket.h  UdpSocket.cc  UdpSocket.h  aio_file.cc  aio_file.h  async_file.cc  async_file.h  file_watcher.cc  file_watcher.h  tcp_socket.cc  tcp_socket.h  udp_socket.cc  udp_socket.h
galay-kernel/common/: AsyncStrategy.hpp  Buffer.cc  Buffer.h  ByteQueueView.h  Bytes.cc  Bytes.h  Defn.hpp  Error.cc  Error.h  HandleOption.cc  HandleOption.h  Host.hpp  Log.h  Sleep.hpp  Strategy.hpp  Strategy.inl  Timer.hpp  TimerManager.hpp  async_strategy.hpp  buffer.cc  bytes.cc  bytes.h  error.cc  handle_option.cc  handle_option.h  host.hpp  safetimer_mgr.hpp  sleep.hpp  timer.hpp  timer_manager.hpp
galay-kernel/concurrency/: AsyncMutex.h  AsyncWaiter.h  MpscChannel.h  UnsafeChannel.h  async_mutex.h  async_waiter.h  mpsc_channel.h  unsafe_channel.h
galay-kernel/kernel/: AsyncWaiter.h  Awaitable.cc  Awaitable.h  Awaitable.inl  BackendReactor.h  BlockingExecutor.cc  BlockingExecutor.h  ComputeScheduler.cc  ComputeScheduler.h  Coroutine.cc  Coroutine.h  EpollReactor.cc  EpollReactor.h  EpollScheduler.cc  EpollScheduler.h  IOController.hpp  IOHandlers.hpp  IOScheduler.hpp  IOSchedulerEventLoop.hpp  IOUringReactor.cc  IOUringReactor.h  IOUringScheduler.cc  IOUringScheduler.h  KqueueReactor.cc  KqueueReactor.h  KqueueScheduler.cc  KqueueScheduler.h  Runtime.cc  Runtime.h  Scheduler.cc  Scheduler.h  Scheduler.hpp  SchedulerCore.h  Task.cc  Task.h  Timeout.h  Timeout.hpp  TimerScheduler.h  Waker.cc  Waker.h  (+35 more)
galay-kernel/module/: galay.kernel.cppm  galay_kernel.cppm  galay_kernel.ixx
scripts/: S1-Check.sh  run.sh  run_benchmark_matrix.sh  run_benchmark_triplet.sh  run_test_matrix.sh  test_sendfile.sh
test/: CMakeLists.txt  SchedulerTestAccess.h  T1-CoroutineChain.cc  T1-coroutine_chain.cc  T10-Timeout.cc  T10-compute_scheduler.cc  T100-sequence_bidirectional_exclusive.cc  T101-sequence_ordinary_conflict.cc  T102-blocking_executor_pool.cc  T102-state_machine_timeout_error_bridge.cc  T103-sequence_interest_sync.cc  T104-handle_option_tcp_nodelay.cc  T105-awaitable_builder_ready_surface.cc  T106-awaitable_builder_ready_runtime.cc  T107-async_mutex_timeout_cleanup.cc  T108-async_public_header_hygiene.cc  T109-kqueue_sequence_persistent_registration_source_case.cc  T11-compute_scheduler.cc  T11-mixed_scheduler.cc  T110-runtime_alignment_source_case.cc  T111-io_controller_move_only_surface.cc  T112-ioscheduler_work_stealing_source_case.cc  T113-ioscheduler_inject_ring_fallback.cc  T114-runtime_io_steal_domain_surface.cc  T115-runtime_io_work_stealing.cc  T116-chase_lev_ring_steal_pop_stress.cc  T117-runtime_io_steal_stats.cc  T118-ioscheduler_local_deferred_fifo.cc  T119-chase_lev_ring_shutdown_release.cc  T12-MixedScheduler.cc  T12-async_mutex.cc  T12-mixed_scheduler.cc  T120-io_uring_steal_disabled_source_case.cc  T124-io_uring_multishot_accept_runtime.cc  T126-io_uring_multishot_recv_source_case.cc  T127-io_uring_multishot_recv_runtime.cc  T13-AsyncMutex.cc  T13-async_mutex.cc  T13-mpsc_channel.cc  T14-MpscChannel.cc  (+267 more)
todo/: todo.list
(+72 files in other folders)
