function(add_kernel_include_example target_name source_file)
    add_executable(${target_name} ${source_file})
    target_link_libraries(${target_name} PRIVATE galay-kernel)
    target_include_directories(${target_name} PRIVATE ${CMAKE_SOURCE_DIR})
endfunction()

function(add_kernel_import_example target_name source_file)
    add_executable(${target_name} ${source_file})
    target_link_libraries(${target_name} PRIVATE galay-kernel-modules)
    target_include_directories(${target_name} PRIVATE ${CMAKE_SOURCE_DIR})
    set_target_properties(${target_name} PROPERTIES CXX_SCAN_FOR_MODULES ON)
endfunction()

# include 版本（传统头文件）
add_kernel_include_example(E1-SendfileExample include/e1_sendfile.cc)
add_kernel_include_example(E2-TcpEchoServer include/e2_echo.cc)
add_kernel_include_example(E3-TcpClient include/e3_tcp.cc)
add_kernel_include_example(E4-TaskBasic include/e4_task.cc)
add_kernel_include_example(E5-UdpEcho include/e5_udp.cc)
add_kernel_include_example(E10-CustomAwaitable include/e10_await.cc)
add_kernel_include_example(E11-BuilderProtocol include/e11_proto.cc)

# import 版本（模块门面 galay.kernel）
if(GALAY_KERNEL_CPP23_MODULES_EFFECTIVE AND TARGET galay-kernel-modules)
    add_kernel_import_example(E1-SendfileExampleImport import/e1_sendfile.cc)
    add_kernel_import_example(E2-TcpEchoServerImport import/e2_echo.cc)
    add_kernel_import_example(E3-TcpClientImport import/e3_tcp.cc)
    add_kernel_import_example(E4-TaskBasicImport import/e4_task.cc)
    add_kernel_import_example(E5-UdpEchoImport import/e5_udp.cc)
    add_kernel_import_example(E6-MpscChannelImport import/e6_mpsc.cc)
    add_kernel_import_example(E7-UnsafeChannelImport import/e7_unsafe.cc)
    add_kernel_import_example(E8-AsyncSyncImport import/e8_async.cc)
    add_kernel_import_example(E9-TimerSleepImport import/e9_sleep.cc)
    add_kernel_import_example(E10-CustomAwaitableImport import/e10_await.cc)
    add_kernel_import_example(E11-BuilderProtocolImport import/e11_proto.cc)
endif()
